<!-- <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" > -->

    <TableLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"  >

        <TableRow
            android:id="@+id/rowQuestion"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
		        android:id="@+id/placeHolderQuestion"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/hello_world" />
        </TableRow>
        
        <TableRow
            android:id="@+id/rowEdit"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" >
            <EditText
                android:id="@+id/placeHolderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                 android:inputType="text" 
                 android:labelFor="@id/placeHolderText" 
                 android:visibility="invisible" >

                <requestFocus />
            </EditText>
        </TableRow>
		<TableRow
                android:id="@+id/rowOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            <RadioGroup
		        android:id="@+id/radioOption"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:visibility="invisible" >
		    </RadioGroup>
		</TableRow>
        <TableRow
            android:id="@+id/rowExplanation"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
		        android:id="@+id/placeHolderExplanation"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/hello_world" />
        </TableRow>
        
        <TableRow
            android:id="@+id/rowButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <ImageButton
                android:contentDescription="@string/btn_previous"
                android:id="@+id/btnprevious"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/prev" />

            <Button
                android:id="@+id/btn_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_check" />
            
            <ImageButton
                android:contentDescription="@string/btn_next"
                android:id="@+id/btnnext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/next" />
        </TableRow>

    </TableLayout>
<!-- 
</LinearLayout> -->